django_codenerix_email (4.0.26) stable; urgency=medium

  * Reversed the list of Email Templates

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 31 Jan 2025 09:28:00 +0200


django_codenerix_email (4.0.25) stable; urgency=medium

  * Test email script corrected

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 30 Dec 2024 06:59:00 +0200


django_codenerix_email (4.0.24) stable; urgency=medium

  * Updated package naming to compliant with PEP625

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 23 Dec 2024 11:09:00 +0200


django-codenerix-email (4.0.23) stable; urgency=medium

  * Translations

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 21 Oct 2024 08:36:00 +0200


django-codenerix-email (4.0.22) stable; urgency=medium

  * Not to confuse the user, the default ordering for EmailMessages is now "-created"

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 15 Oct 2024 10:56:00 +0200


django-codenerix-email (4.0.21) stable; urgency=medium

  * Added support for custom headers for EmailMessages

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 15 Oct 2024 10:26:00 +0200


django-codenerix-email (4.0.20) stable; urgency=medium

  * Repaired headers for EmailMessages

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 11 Oct 2024 12:57:00 +0200


django-codenerix-email (4.0.19) stable; urgency=medium

  * Improved listing of messages

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 11 Oct 2024 06:26:00 +0200


django-codenerix-email (4.0.18) stable; urgency=medium

  * Newer version of CODENERIX is required for this one to work

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 10 Oct 2024 14:37:00 +0200


django-codenerix-email (4.0.17) stable; urgency=medium

  * Support for unsubscribe headers

 -- Juanmi Taboada <juanmi@juanmitaboada.com>  Thu, 10 Oct 2024 14:33:00 +0200


django-codenerix-email (4.0.16) stable; urgency=medium

  * Improved listing for sent emails
