@@ -1,4 +1,4 @@
-__version__ = "4.0.26"
+__version__ = "4.0.27"
 
 __authors__ = [
     "Juan Miguel Taboada Godoy <juanmi@juanmitaboada.com>",
