@@ -1,3 +1,10 @@
+django_codenerix_email (4.0.27) stable; urgency=medium
+
+  * Support for manage.py command "test_email" which now support extra arguments to improve testing
+
+ -- Juanmi Taboada <juanmi@juanmitaboada.com>  Mon, 12 May 2025 11:57:00 +0200
+
+
 django_codenerix_email (4.0.26) stable; urgency=medium
 
   * Reversed the list of Email Templates
